# meven-2040

./: HW_DESIGN.md  README.md  SW_DESIGN.md
bootloader/: CMakeLists.txt  secondary.cpp
